--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://xx.github.io/230109",
+  "homepage": "https://rbsss2.github.io/230109",
   "name": "230102",
   "version": "0.1.0",
   "private": true,
